--- a/public/index.html
+++ b/public/index.html
@@ -7,22 +7,24 @@
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jasmine/2.3.4/jasmine.min.css">
       <link rel="stylesheet" href="style.css">
+
+      <script type="text/javascript" src="bower_components/ace-builds/src-min-noconflict/ace.js"></script>
+      <script type="text/javascript" src="bower_components/angular/angular.js"></script>
+      <script type="text/javascript" src="bower_components/angular-ui-ace/ui-ace.js"></script>
+
       <script src="https://cdnjs.cloudflare.com/ajax/libs/jasmine/2.3.4/jasmine.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/jasmine/2.3.4/jasmine-html.min.js"></script>
-      <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.6/angular.min.js"></script>
       <script src="script.js"></script>
     </head>
     <body ng-controller="ctrl">
       <div class="container-fluid">
         <div class="col-md-4">
           Your code
-          <textarea ng-model="code">
-          </textarea>
+          <div ui-ace="aceConfig" ng-model="code"></div>
         </div>
         <div class="col-md-4">
           Your tests
-          <textarea ng-model="tests">
-          </textarea>
+          <div ui-ace="aceConfig" ng-model="tests"></div>
         </div>
         <div class="col-md-4">
           Results
