--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,8 @@
       <script type="text/javascript" src="bower_components/ace-builds/src-min-noconflict/ace.js"></script>
       <script type="text/javascript" src="bower_components/angular/angular.js"></script>
       <script type="text/javascript" src="bower_components/angular-ui-ace/ui-ace.js"></script>
-
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/jasmine/2.3.4/jasmine.min.js"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/jasmine/2.3.4/jasmine-html.min.js"></script>
+      <script type="text/javascript" src="bower_components/jasmine-core/lib/jasmine-core/jasmine.js"></script>
+      <script type="text/javascript" src="bower_components/jasmine-core/lib/jasmine-core/jasmine-html.js"></script>
       <script src="script.js"></script>
     </head>
     <body ng-controller="ctrl">
